test/trivial/deitz/test_var_decl_strange4.good
test_var_decl_strange4.chpl:1: In function '__init_test_var_decl_strange4':
test_var_decl_strange4.chpl:4: error: 'x' used before defined
